# nginx_1.19

./: README.md
nginx-1.19.2/: CMakeLists.txt
nginx-1.19.2/src/: CMakeLists.txt
nginx-1.19.2/src/core/: nginx.c  ngx_connection.c  ngx_log.c  ngx_syslog.c
nginx-1.19.2/src/os/unix/: ngx_posix_init.c
pcre-8.38/: Makefile  config.status
