cmake_minimum_required(VERSION 3.17)
project(src)

set(CMAKE_CXX_STANDARD 14)

include_directories(core)
include_directories(event)
include_directories(http)
include_directories(http/modules)
include_directories(http/modules/perl)
include_directories(http/v2)
include_directories(mail)
include_directories(os/unix)
include_directories(stream)

add_executable(src
        core/nginx.c
        core/nginx.h
        core/ngx_array.c
        core/ngx_array.h
        core/ngx_buf.c
        core/ngx_buf.h
        core/ngx_conf_file.c
        core/ngx_conf_file.h
        core/ngx_config.h
        core/ngx_connection.c
        core/ngx_connection.h
        core/ngx_core.h
        core/ngx_cpuinfo.c
        core/ngx_crc.h
        core/ngx_crc32.c
        core/ngx_crc32.h
        core/ngx_crypt.c
        core/ngx_crypt.h
        core/ngx_cycle.c
        core/ngx_cycle.h
        core/ngx_file.c
        core/ngx_file.h
        core/ngx_hash.c
        core/ngx_hash.h
        core/ngx_inet.c
        core/ngx_inet.h
        core/ngx_list.c
        core/ngx_list.h
        core/ngx_log.c
        core/ngx_log.h
        core/ngx_md5.c
        core/ngx_md5.h
        core/ngx_module.c
        core/ngx_module.h
        core/ngx_murmurhash.c
        core/ngx_murmurhash.h
        core/ngx_open_file_cache.c
        core/ngx_open_file_cache.h
        core/ngx_output_chain.c
        core/ngx_palloc.c
        core/ngx_palloc.h
        core/ngx_parse.c
        core/ngx_parse.h
        core/ngx_parse_time.c
        core/ngx_parse_time.h
        core/ngx_proxy_protocol.c
        core/ngx_proxy_protocol.h
        core/ngx_queue.c
        core/ngx_queue.h
        core/ngx_radix_tree.c
        core/ngx_radix_tree.h
        core/ngx_rbtree.c
        core/ngx_rbtree.h
        core/ngx_regex.c
        core/ngx_regex.h
        core/ngx_resolver.c
        core/ngx_resolver.h
        core/ngx_rwlock.c
        core/ngx_rwlock.h
        core/ngx_sha1.c
        core/ngx_sha1.h
        core/ngx_shmtx.c
        core/ngx_shmtx.h
        core/ngx_slab.c
        core/ngx_slab.h
        core/ngx_spinlock.c
        core/ngx_string.c
        core/ngx_string.h
        core/ngx_syslog.c
        core/ngx_syslog.h
        core/ngx_thread_pool.c
        core/ngx_thread_pool.h
        core/ngx_times.c
        core/ngx_times.h
        event/modules/ngx_devpoll_module.c
        event/modules/ngx_epoll_module.c
        event/modules/ngx_eventport_module.c
        event/modules/ngx_kqueue_module.c
        event/modules/ngx_poll_module.c
        event/modules/ngx_select_module.c
        event/modules/ngx_win32_poll_module.c
        event/modules/ngx_win32_select_module.c
        event/ngx_event.c
        event/ngx_event.h
        event/ngx_event_accept.c
        event/ngx_event_connect.c
        event/ngx_event_connect.h
        event/ngx_event_openssl.c
        event/ngx_event_openssl.h
        event/ngx_event_openssl_stapling.c
        event/ngx_event_pipe.c
        event/ngx_event_pipe.h
        event/ngx_event_posted.c
        event/ngx_event_posted.h
        event/ngx_event_timer.c
        event/ngx_event_timer.h
        event/ngx_event_udp.c
        http/modules/perl/ngx_http_perl_module.c
        http/modules/perl/ngx_http_perl_module.h
        http/modules/ngx_http_access_module.c
        http/modules/ngx_http_addition_filter_module.c
        http/modules/ngx_http_auth_basic_module.c
        http/modules/ngx_http_auth_request_module.c
        http/modules/ngx_http_autoindex_module.c
        http/modules/ngx_http_browser_module.c
        http/modules/ngx_http_charset_filter_module.c
        http/modules/ngx_http_chunked_filter_module.c
        http/modules/ngx_http_dav_module.c
        http/modules/ngx_http_degradation_module.c
        http/modules/ngx_http_empty_gif_module.c
        http/modules/ngx_http_fastcgi_module.c
        http/modules/ngx_http_flv_module.c
        http/modules/ngx_http_geo_module.c
        http/modules/ngx_http_geoip_module.c
        http/modules/ngx_http_grpc_module.c
        http/modules/ngx_http_gunzip_filter_module.c
        http/modules/ngx_http_gzip_filter_module.c
        http/modules/ngx_http_gzip_static_module.c
        http/modules/ngx_http_headers_filter_module.c
        http/modules/ngx_http_image_filter_module.c
        http/modules/ngx_http_index_module.c
        http/modules/ngx_http_limit_conn_module.c
        http/modules/ngx_http_limit_req_module.c
        http/modules/ngx_http_log_module.c
        http/modules/ngx_http_map_module.c
        http/modules/ngx_http_memcached_module.c
        http/modules/ngx_http_mirror_module.c
        http/modules/ngx_http_mp4_module.c
        http/modules/ngx_http_not_modified_filter_module.c
        http/modules/ngx_http_proxy_module.c
        http/modules/ngx_http_random_index_module.c
        http/modules/ngx_http_range_filter_module.c
        http/modules/ngx_http_realip_module.c
        http/modules/ngx_http_referer_module.c
        http/modules/ngx_http_rewrite_module.c
        http/modules/ngx_http_scgi_module.c
        http/modules/ngx_http_secure_link_module.c
        http/modules/ngx_http_slice_filter_module.c
        http/modules/ngx_http_split_clients_module.c
        http/modules/ngx_http_ssi_filter_module.c
        http/modules/ngx_http_ssi_filter_module.h
        http/modules/ngx_http_ssl_module.c
        http/modules/ngx_http_ssl_module.h
        http/modules/ngx_http_static_module.c
        http/modules/ngx_http_stub_status_module.c
        http/modules/ngx_http_sub_filter_module.c
        http/modules/ngx_http_try_files_module.c
        http/modules/ngx_http_upstream_hash_module.c
        http/modules/ngx_http_upstream_ip_hash_module.c
        http/modules/ngx_http_upstream_keepalive_module.c
        http/modules/ngx_http_upstream_least_conn_module.c
        http/modules/ngx_http_upstream_random_module.c
        http/modules/ngx_http_upstream_zone_module.c
        http/modules/ngx_http_userid_filter_module.c
        http/modules/ngx_http_uwsgi_module.c
        http/modules/ngx_http_xslt_filter_module.c
        http/v2/ngx_http_v2.c
        http/v2/ngx_http_v2.h
        http/v2/ngx_http_v2_encode.c
        http/v2/ngx_http_v2_filter_module.c
        http/v2/ngx_http_v2_huff_decode.c
        http/v2/ngx_http_v2_huff_encode.c
        http/v2/ngx_http_v2_module.c
        http/v2/ngx_http_v2_module.h
        http/v2/ngx_http_v2_table.c
        http/ngx_http.c
        http/ngx_http.h
        http/ngx_http_cache.h
        http/ngx_http_config.h
        http/ngx_http_copy_filter_module.c
        http/ngx_http_core_module.c
        http/ngx_http_core_module.h
        http/ngx_http_file_cache.c
        http/ngx_http_header_filter_module.c
        http/ngx_http_parse.c
        http/ngx_http_postpone_filter_module.c
        http/ngx_http_request.c
        http/ngx_http_request.h
        http/ngx_http_request_body.c
        http/ngx_http_script.c
        http/ngx_http_script.h
        http/ngx_http_special_response.c
        http/ngx_http_upstream.c
        http/ngx_http_upstream.h
        http/ngx_http_upstream_round_robin.c
        http/ngx_http_upstream_round_robin.h
        http/ngx_http_variables.c
        http/ngx_http_variables.h
        http/ngx_http_write_filter_module.c
        mail/ngx_mail.c
        mail/ngx_mail.h
        mail/ngx_mail_auth_http_module.c
        mail/ngx_mail_core_module.c
        mail/ngx_mail_handler.c
        mail/ngx_mail_imap_handler.c
        mail/ngx_mail_imap_module.c
        mail/ngx_mail_imap_module.h
        mail/ngx_mail_parse.c
        mail/ngx_mail_pop3_handler.c
        mail/ngx_mail_pop3_module.c
        mail/ngx_mail_pop3_module.h
        mail/ngx_mail_proxy_module.c
        mail/ngx_mail_smtp_handler.c
        mail/ngx_mail_smtp_module.c
        mail/ngx_mail_smtp_module.h
        mail/ngx_mail_ssl_module.c
        mail/ngx_mail_ssl_module.h
        misc/ngx_cpp_test_module.cpp
        misc/ngx_google_perftools_module.c
        os/unix/ngx_alloc.c
        os/unix/ngx_alloc.h
        os/unix/ngx_atomic.h
        os/unix/ngx_channel.c
        os/unix/ngx_channel.h
        os/unix/ngx_daemon.c
        os/unix/ngx_darwin.h
        os/unix/ngx_darwin_config.h
        os/unix/ngx_darwin_init.c
        os/unix/ngx_darwin_sendfile_chain.c
        os/unix/ngx_dlopen.c
        os/unix/ngx_dlopen.h
        os/unix/ngx_errno.c
        os/unix/ngx_errno.h
        os/unix/ngx_file_aio_read.c
        os/unix/ngx_files.c
        os/unix/ngx_files.h
        os/unix/ngx_freebsd.h
        os/unix/ngx_freebsd_config.h
        os/unix/ngx_freebsd_init.c
        os/unix/ngx_freebsd_sendfile_chain.c
        os/unix/ngx_gcc_atomic_amd64.h
        os/unix/ngx_gcc_atomic_ppc.h
        os/unix/ngx_gcc_atomic_sparc64.h
        os/unix/ngx_gcc_atomic_x86.h
        os/unix/ngx_linux.h
        os/unix/ngx_linux_aio_read.c
        os/unix/ngx_linux_config.h
        os/unix/ngx_linux_init.c
        os/unix/ngx_linux_sendfile_chain.c
        os/unix/ngx_os.h
        os/unix/ngx_posix_config.h
        os/unix/ngx_posix_init.c
        os/unix/ngx_process.c
        os/unix/ngx_process.h
        os/unix/ngx_process_cycle.c
        os/unix/ngx_process_cycle.h
        os/unix/ngx_readv_chain.c
        os/unix/ngx_recv.c
        os/unix/ngx_send.c
        os/unix/ngx_setaffinity.c
        os/unix/ngx_setaffinity.h
        os/unix/ngx_setproctitle.c
        os/unix/ngx_setproctitle.h
        os/unix/ngx_shmem.c
        os/unix/ngx_shmem.h
        os/unix/ngx_socket.c
        os/unix/ngx_socket.h
        os/unix/ngx_solaris.h
        os/unix/ngx_solaris_config.h
        os/unix/ngx_solaris_init.c
        os/unix/ngx_solaris_sendfilev_chain.c
        os/unix/ngx_sunpro_atomic_sparc64.h
        os/unix/ngx_thread.h
        os/unix/ngx_thread_cond.c
        os/unix/ngx_thread_id.c
        os/unix/ngx_thread_mutex.c
        os/unix/ngx_time.c
        os/unix/ngx_time.h
        os/unix/ngx_udp_recv.c
        os/unix/ngx_udp_send.c
        os/unix/ngx_udp_sendmsg_chain.c
        os/unix/ngx_user.c
        os/unix/ngx_user.h
        os/unix/ngx_writev_chain.c
        stream/ngx_stream.c
        stream/ngx_stream.h
        stream/ngx_stream_access_module.c
        stream/ngx_stream_core_module.c
        stream/ngx_stream_geo_module.c
        stream/ngx_stream_geoip_module.c
        stream/ngx_stream_handler.c
        stream/ngx_stream_limit_conn_module.c
        stream/ngx_stream_log_module.c
        stream/ngx_stream_map_module.c
        stream/ngx_stream_proxy_module.c
        stream/ngx_stream_realip_module.c
        stream/ngx_stream_return_module.c
        stream/ngx_stream_script.c
        stream/ngx_stream_script.h
        stream/ngx_stream_split_clients_module.c
        stream/ngx_stream_ssl_module.c
        stream/ngx_stream_ssl_module.h
        stream/ngx_stream_ssl_preread_module.c
        stream/ngx_stream_upstream.c
        stream/ngx_stream_upstream.h
        stream/ngx_stream_upstream_hash_module.c
        stream/ngx_stream_upstream_least_conn_module.c
        stream/ngx_stream_upstream_random_module.c
        stream/ngx_stream_upstream_round_robin.c
        stream/ngx_stream_upstream_round_robin.h
        stream/ngx_stream_upstream_zone_module.c
        stream/ngx_stream_variables.c
        stream/ngx_stream_variables.h
        stream/ngx_stream_write_filter_module.c)
